[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Fish.tscn" type="PackedScene" id=2]
[ext_resource path="res://Image/Backgrounds/Lake.png" type="Texture" id=3]
[ext_resource path="res://Image/TextureProgress/LineHealthBar_under.png" type="Texture" id=4]
[ext_resource path="res://Image/TextureProgress/FishStunBar_progress.png" type="Texture" id=5]
[ext_resource path="res://Image/TextureProgress/FishStunBar_under.png" type="Texture" id=6]
[ext_resource path="res://Image/TextureProgress/LineHealthBar_progress.png" type="Texture" id=7]
[ext_resource path="res://Styles/ButtonPressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Styles/ButtonHover.tres" type="StyleBox" id=9]
[ext_resource path="res://Styles/ButtonDisabled.tres" type="StyleBox" id=10]
[ext_resource path="res://Styles/ButtonNormal.tres" type="StyleBox" id=11]
[ext_resource path="res://Image/Others/Coin.png" type="Texture" id=12]
[ext_resource path="res://Image/Others/WeightIcon.png" type="Texture" id=13]
[ext_resource path="res://Image/TextureProgress/PulProgressBar_Under.png" type="Texture" id=14]
[ext_resource path="res://Image/TextureProgress/PulProgressBar_Progress.png" type="Texture" id=15]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
rect_min_size = Vector2( 600, 600 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="FishStun" type="TextureProgress" parent="."]
margin_left = 140.0
margin_top = 14.0
margin_right = 460.0
margin_bottom = 46.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )

[node name="GenerateStunPoint" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Fish" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 100 )

[node name="Utils" type="GridContainer" parent="."]
margin_top = 522.0
margin_right = 600.0
margin_bottom = 576.0

[node name="PullQuality" type="Label" parent="Utils"]
margin_right = 600.0
margin_bottom = 18.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "PullQuality"
align = 1
valign = 1

[node name="FishingLineHealth" type="TextureProgress" parent="Utils"]
margin_left = 8.0
margin_top = 22.0
margin_right = 592.0
margin_bottom = 54.0
size_flags_horizontal = 6
size_flags_vertical = 7
value = 70.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 7 )
fill_mode = 6

[node name="Pull" type="TextureProgress" parent="Utils/FishingLineHealth"]
margin_top = 25.0
margin_right = 584.0
margin_bottom = 47.0
size_flags_horizontal = 6
size_flags_vertical = 7
value = 100.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 15 )
fill_mode = 6

[node name="VaraLine" type="Line2D" parent="."]
points = PoolVector2Array( 300, 520, 300, 400, 300, 100 )
default_color = Color( 1, 0, 0, 1 )

[node name="AfterCatchFish" type="Node2D" parent="."]
visible = false

[node name="Panel" type="Panel" parent="AfterCatchFish"]
margin_left = 8.0
margin_top = 56.0
margin_right = 592.0
margin_bottom = 568.0

[node name="GridContainer" type="GridContainer" parent="AfterCatchFish"]
margin_left = 16.0
margin_top = 72.0
margin_right = 300.0
margin_bottom = 316.0
rect_scale = Vector2( 2, 2 )

[node name="Text" type="Label" parent="AfterCatchFish/GridContainer"]
margin_right = 284.0
margin_bottom = 16.0
text = "Fish Caugth!"
align = 1
valign = 1

[node name="Fish" type="GridContainer" parent="AfterCatchFish/GridContainer"]
margin_top = 20.0
margin_right = 284.0
margin_bottom = 160.0
size_flags_horizontal = 7
size_flags_vertical = 7
columns = 2

[node name="Img" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish"]
margin_right = 112.0
margin_bottom = 140.0
rect_min_size = Vector2( 112, 112 )

[node name="FishInfos" type="GridContainer" parent="AfterCatchFish/GridContainer/Fish"]
margin_left = 116.0
margin_right = 284.0
margin_bottom = 140.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Level" type="GridContainer" parent="AfterCatchFish/GridContainer/Fish/FishInfos"]
margin_right = 168.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/hseparation = 0
columns = 5

[node name="1" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Level"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="2" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Level"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="3" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Level"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="4" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Level"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="5" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Level"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Name" type="GridContainer" parent="AfterCatchFish/GridContainer/Fish/FishInfos"]
margin_top = 36.0
margin_right = 168.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Gender" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Name"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Name" type="Label" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Name"]
margin_left = 36.0
margin_right = 168.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="Peso" type="GridContainer" parent="AfterCatchFish/GridContainer/Fish/FishInfos"]
margin_top = 72.0
margin_right = 168.0
margin_bottom = 104.0
size_flags_vertical = 7
columns = 2

[node name="Peso" type="Label" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Peso"]
margin_right = 132.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="ConstIcon" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Peso"]
margin_left = 136.0
margin_right = 168.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 13 )

[node name="Preço" type="GridContainer" parent="AfterCatchFish/GridContainer/Fish/FishInfos"]
margin_top = 108.0
margin_right = 168.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="ConstIcon" type="TextureRect" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Preço"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 12 )

[node name="Preço" type="Label" parent="AfterCatchFish/GridContainer/Fish/FishInfos/Preço"]
margin_left = 36.0
margin_right = 168.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="Decide" type="GridContainer" parent="AfterCatchFish/GridContainer"]
margin_top = 164.0
margin_right = 284.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 7
size_flags_vertical = 5
columns = 3

[node name="Release" type="Button" parent="AfterCatchFish/GridContainer/Decide"]
pause_mode = 2
margin_right = 81.0
margin_bottom = 80.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
text = "Release"

[node name="AddToAquarium" type="Button" parent="AfterCatchFish/GridContainer/Decide"]
pause_mode = 2
margin_left = 85.0
margin_right = 198.0
margin_bottom = 80.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
text = "Add to aquarium"

[node name="Sell" type="Button" parent="AfterCatchFish/GridContainer/Decide"]
pause_mode = 2
margin_left = 202.0
margin_right = 283.0
margin_bottom = 80.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 11 )
text = "Sell"

[connection signal="timeout" from="GenerateStunPoint" to="." method="_on_GenerateStunPoint_timeout"]
